--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -18,6 +18,8 @@ dependencies:
   get_it: ^7.2.0
   bloc: ^8.1.0
   flutter_bloc: ^8.1.1
+  collection: ^1.16.0
+  rxdart: ^0.27.5
 
 dev_dependencies:
   flutter_test:
