--- a/android/app/src/main/AndroidManifest.xml
+++ b/android/app/src/main/AndroidManifest.xml
@@ -1,6 +1,7 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     package="com.example.shara_movies">
-   <application
+    <uses-permission android:name="android.permission.INTERNET" />
+    <application
         android:label="shara_movies"
         android:name="${applicationName}"
         android:icon="@mipmap/ic_launcher">
