--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -20,6 +20,8 @@ dependencies:
   flutter_bloc: ^8.1.1
   collection: ^1.16.0
   rxdart: ^0.27.5
+  freezed_annotation: ^2.2.0
+
 
 dev_dependencies:
   flutter_test:
@@ -29,6 +31,8 @@ dev_dependencies:
   build_runner: ^2.1.11
   retrofit_generator: ^4.0.1
   injectable_generator: ^1.5.3
+  freezed: ^2.2.0
+
 
 
 
